[project]
name = "ravs-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.44",
    "langchain>=1.2.9",
    "langchain-openai>=1.1.7",
    "langchain-pinecone>=0.2.13",
    "mcp>=1.26.0",
    "mcp-server>=0.1.4",
]
